--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,10 @@
     "conventionalCommits.scopes": [
         "project",
         "config",
-        "output"
-    ]
+        "output",
+        "structures"
+    ],
+    "files.associations": {
+        "stdarg.h": "c"
+    }
 }
