chore(config): :wrench: adiciona novo contexto de commit.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "project",
         "config",
         "output",
-        "structures"
+        "structures",
+        "ranking"
     ],
     "files.associations": {
         "stdarg.h": "c"
