chore(config): :wrench: adiciona contexto de commit.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
         "config",
         "output",
         "structures",
-        "ranking"
+        "ranking",
+        "helpers"
     ],
     "files.associations": {
         "stdarg.h": "c"
