chore(config): :wrench: atualiza o arquivo de configuracao do vscode.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "output.h": "c",
         "pacman.h": "c",
         "statistics.h": "c",
-        "summary.h": "c"
+        "summary.h": "c",
+        "ranking.h": "c"
     }
 }
