--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "structures",
         "ranking",
         "helpers",
-        "imports"
+        "imports",
+        "statistics"
     ],
     "files.associations": {
         "stdarg.h": "c",
