chore(config): :wrench: adiciona novos contextos de commit.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,9 @@
         "imports",
         "statistics",
         "moviments-actions",
-        "ghosts"
+        "ghosts",
+        "input",
+        "pacman"
     ],
     "files.associations": {
         "stdarg.h": "c",
